# seminar2024_demo

./: ElaNet_non_negative_FISTA.ipynb  README.md  Seminar2024_Image Processing_王 孟琪.pptx  comp_deconv.ipynb  convolved_demo.ipynb  demo.ipynb  gaussian_demo.ipynb  gaussian_demo_practice.ipynb  pyproject.toml  regulation.ipynb
.ipynb_checkpoints/: convolved_demo-checkpoint.ipynb  demo-checkpoint.ipynb  gaussian_demo-checkpoint.ipynb
data/: CeO2_Analyzer_BL39XU_2D_XES.xlsx  CeO2_TES_2D_XES_4700_4900eV_190710_220211_cor.xlsx  TES_detector_response_function_Fe_num0079_200804.xlsx
images/comp_deconv/: conv_noise_2eV.csv
practice/: comp_deconv.ipynb
